--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.6
+  firebase_core: ^3.3.0
+  cloud_firestore: ^5.2.0
 
 dev_dependencies:
   flutter_test:
