--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,15 @@ dependencies:
   get: ^4.6.6
   firebase_core: ^3.3.0
   cloud_firestore: ^5.2.0
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
